--- a/Weather/app/src/main/res/values/colors.xml
+++ b/Weather/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#00a7a8</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="mainBackground">#e2e2e2</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
