--- a/Weather/app/src/main/res/values/styles.xml
+++ b/Weather/app/src/main/res/values/styles.xml
@@ -1,13 +1,13 @@
-<resources>
+ <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="AppTheme.Base"/>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
 
-    <style name="AppTheme.Base" parent="Theme.AppCompat">
+    <style name="AppDefault" parent="AppTheme">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:windowActionBar">false</item>
+        <item name="colorControlNormal">@color/colorWhite</item>
     </style>
 
 </resources>
