--- a/Weather/app/src/main/res/layout/navigation_header.xml
+++ b/Weather/app/src/main/res/layout/navigation_header.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="192dp"
-    android:background="@color/colorPrimaryDark"
+    android:background="@drawable/lol"
     >
 
 
