--- a/Weather/app/src/main/res/values/colors.xml
+++ b/Weather/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00a7a8</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="mainBackground">#e2e2e2</color>
+    <color name="colorPrimary">#303030</color>
+    <color name="colorPrimaryDark">#212121</color>
+    <color name="mainBackground">#424242</color>
     <color name="colorWhite">#ffffff</color>
 </resources>
