--- a/Weather/app/src/main/res/values/colors.xml
+++ b/Weather/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#303030</color>
+    <color name="colorPrimary">#2e000000</color>
     <color name="colorPrimaryDark">#212121</color>
     <color name="mainBackground">#424242</color>
     <color name="colorWhite">#ffffff</color>
